// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentToggle() good usage render supports negative numeric off or on values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 1,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 2,
        "isRefined": true,
      },
      "onFacetValue": Object {
        "count": 1,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render supports negative numeric off or on values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 1,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 2,
        "isRefined": true,
      },
      "onFacetValue": Object {
        "count": 1,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render understands cssClasses 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox test-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label test-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText test-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement test",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render when refined 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 3,
      "isRefined": true,
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": true,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render when refined 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 3,
      "isRefined": true,
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": true,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render with facet values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render with facet values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": 2,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 3,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": 2,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render without facet values 1`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": null,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 0,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": null,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;

exports[`currentToggle() good usage render without facet values 2`] = `
<ToggleRefinement
  createURL={[Function]}
  cssClasses={
    Object {
      "checkbox": "ais-Toggleconst usage = \`Usage:Refinement-checkbox",
      "label": "ais-Toggleconst usage = \`Usage:Refinement-label",
      "labelText": "ais-Toggleconst usage = \`Usage:Refinement-labelText",
      "root": "ais-Toggleconst usage = \`Usage:Refinement",
    }
  }
  currentRefinement={
    Object {
      "count": null,
      "isRefined": false,
      "offFacetValue": Object {
        "count": 0,
        "isRefined": false,
      },
      "onFacetValue": Object {
        "count": null,
        "isRefined": false,
      },
    }
  }
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "labelText": "{{name}}",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "labelText": false,
      },
    }
  }
/>
`;
